@@ -1,5 +1,5 @@
 #############################################################################
-BETA PUBLIC RELEASE VERSION 1.4.1       5-5-09
+BETA PUBLIC RELEASE VERSION 1.4.1       5-8-09
 #############################################################################
  - NEW FEATURES
   * Disabled Typemap output by default, added --typemap flag to create typemap
@@ -18,6 +18,9 @@ BETA PUBLIC RELEASE VERSION 1.4.1       5-5-09
     smashing problem in simple test on Ubuntu Linux with recent gcc versions.
   * Verbosity outputs should be stdouts, not stderrs in web server interface. 
     Corrected this in src/routines.py.
+  * Fixed a bug in psize.py: for a pqr file with no ATOM entries but only 
+    HETATM entries in it, inputgen.py should still create an APBS input file
+    with reasonable grid lengths. 
 
 #############################################################################
 BETA PUBLIC RELEASE VERSION 1.4.0       3-31-09
